kyy-k8s-config/src/staging/website/skaoyaya/skaoyaya-servide.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: skaoyaya
  name: skaoyaya
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: skaoyaya
